core/codegen/tests/compile-fail/unknown-attribute-param.rs
#![feature(plugin, decl_macro)]
#![plugin(rocket_codegen)]

extern crate rocket;

#[get(path = "/hello", unknown = 123)]  //~ ERROR 'unknown' is not a known param
fn get() -> &'static str { "hi" }

fn main() {
    let _ = routes![get];
}

